--- a/templates/form_manual.html
+++ b/templates/form_manual.html
@@ -116,25 +116,22 @@
 
             <label for="deposito">Depósito:</label>
             <select id="deposito" name="deposito" required>
-                <option value="">Seleccione Depósito</option>
                 {% for deposito in depositos %}
-                    <option value="{{ deposito }}">{{ deposito }}</option>
+                    <option value="{{ deposito }}" {% if loop.first %}selected{% endif %}>{{ deposito }}</option>
                 {% endfor %}
             </select>
 
             <label for="estanteria">Estantería:</label>
             <select id="estanteria" name="estanteria" required>
-                <option value="">Seleccione Estantería</option>
                 {% for estanteria in estanterias %}
-                    <option value="{{ estanteria }}">{{ estanteria }}</option>
+                    <option value="{{ estanteria }}" {% if loop.first %}selected{% endif %}>{{ estanteria }}</option>
                 {% endfor %}
             </select>
 
             <label for="locacion">Locación:</label>
             <select id="locacion" name="locacion" required>
-                <option value="">Seleccione Locación</option>
                 {% for locacion in locaciones %}
-                    <option value="{{ locacion }}">{{ locacion }}</option>
+                    <option value="{{ locacion }}" {% if loop.first %}selected{% endif %}>{{ locacion }}</option>
                 {% endfor %}
             </select>
 
